<resources>
    <string name="app_name">Monabih AlZakren</string>
    <string-array name="menu1">
        <item>Your Diary</item>
        <item>Dhikr</item>
        <item>Khatamat Quran</item>
    </string-array>
    <string-array name="menu2">
        <item>Settings</item>
        <item>About</item>
        <item>Rate our app</item>
    </string-array>
    <string-array name="azkar_types">
        <item>Daily Azkar</item>
        <item>Frequent Azkar</item>
    </string-array>
    <string-array name="zekr_ids">
        <item>Subhan\'Allah</item>
        <item>Alhamdulillah</item>
        <item>Allah Akbar</item>
        <item>La ilaha ilallah</item>
        <item>Subhanal-lahi wabihamdih subhan the greatest Allah</item>
        <item>La hawla wala quwwata illa billah</item>
        <item>La ila ha illa anta subhanaka inni kuntu minazzalimeen</item>
        <item>God blessings and peace upon our Prophet Muhammad</item>
        <item>Astaghfirullahl Azeem </item>
        <item>Varied Azkar</item>
        <item>The Morning and Evening Dhikr</item>
        <item>Dhikr before sleeping</item>
        <item>Salat ad-Duha</item>
    </string-array>
    <string-array name="notification_repeats">
        <item>30 minute</item>
        <item>one hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>
    <string-array name="notification_types">
        <item>Notification only</item>
        <item>Notification with Zekr sound</item>
        <item>Open application on Zekr</item>
    </string-array>
    <string-array name="zekr_dairy_actions">
        <item>Skip for today</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string-array name="khatmah_diary_actions">
        <item>Skip for today</item>
        <item>Read werd</item>
        <item>Today\'s werd done</item>
        <item>Edit</item>
        <item>Rename</item>
        <item>Delete</item>
    </string-array>
    <string name="pref_cat1">display settings</string>
    <string name="pref_lang_ar">Arabic Mode</string>
    <string name="pref_lang_summ">Application will be localized to Arabic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="new_zekr">Add new Dhikr</string>
    <string name="title_activity_new_zekr">New Dhikr</string>
    <string name="save">save</string>
    <string name="save_zekr_done">Dhikr saved</string>
    <string name="notification_title_azkar">Remember Allah</string>
    <string name="notification_message_azkar">It\'s time for : </string>
    <string name="time_category">Time settings</string>
    <string name="pref_wake_title">Wake up time</string>
    <string name="pref_wake_summary">No notifications would be issued before this time</string>
    <string name="pref_sleep_title">Sleep time</string>
    <string name="pref_sleep_summary">No notifications would be issued after this time</string>
    <string name="azkar_not_found">No Azkar have been saved</string>
    <string name="zekr_reminder">This Dhikr would be repeated every : </string>
    <string name="zekr_type">Remembrance</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="zekr_edit_title">Edit Dhikr</string>
    <string name="zekr_edit_done">Dhikr edited successfully</string>
    <string name="pref_doha_salah_title">Salat ad-Duha time</string>
    <string name="pref_sbah_title">Morning azkar time</string>
    <string name="pref_masa_title">Evening azkar time</string>
    <string name="notify_header">Reminder :</string>
    <string name="zekr_start">Starts at :</string>
    <string name="zekr_type_id">Azkar category</string>
    <string name="zekr_repeat">Repeat every :</string>
    <string name="notify_type">Remind by :</string>
    <string name="zekr">The Dhikr :</string>
    <string name="zekr_id">Choose a Dhikr :</string>
    <string name="no_reminder">You haven\'t set a reminder for This Dhikr</string>
    <string name="new_khatmah">Add new Khatmah</string>
    <string name="khatmah_start_from_header">Start this khatmah from :</string>
    <string name="khatmah_duration_header">Khatmah duration :</string>
    <string name="khatmah_start_juz2">Juz\'</string>
    <string name="khatmah_start_sura">Sura</string>
    <string name="khatmah_start_ayah">Ayah</string>
    <string name="khatmah_duration_monthes">Monthes</string>
    <string name="khatmah_duration_dayes">Dayes</string>
    <string name="khatmah_duration_werd">Werd (page/day)</string>
    <string name="khatmah_reminder_header">Reminder :</string>
    <string name="khatmah_reminder_time">Notification at :</string>
    <string name="khatmah_reminder_name">Khatmah name :</string>
    <string name="khatmah_reminder_name_hint"><font size="12">name of this khatmah</font></string>
    <string name="discard_khatmah_message">Do you want discard this Khatmah?</string>
    <string name="khatmah_save_done">Khatmah saved</string>
    <string name="khatmah_name">Khatmah</string>
    <string name="notification_message_khatmah">Your werd today is %1$d page(s), from Ayah %2$d Surat %3$s</string>
    <string name="notification_action_read">Read now</string>
    <string name="notification_action_done">Done</string>
    <string name="notification_action_not_now">not now</string>
    <string name="khatmat_not_found">No Khatmat have been saved</string>
    <string name="khatmah_card_reminder">This Khatmah reminder is at %s</string>
    <string name="khatmah_card_werd">Today\'s werd : from %1$s to %2$s</string>
    <string name="khatmah_card_no_reminder">No reminder for this Khatmah</string>
    <string name="popup_khatmah_done">Today werd done</string>
    <string name="popup_khatmah_read">Read the werd</string>
    <string name="khatmah_update_toast">Khatmah updated successfuly</string>
    <string name="khatmah_update_all_toast">Khatmat updated successfuly</string>
    <string name="discard_khatmah_changes">Do you want discard changes?</string>
    <string name="khatmah_edit_done">Khatmah edited successfully</string>
    <string name="khatmah_delete_done">Khatmah had been removed</string>
    <string name="khatmah_delete_cab_done">Khatmat had been removed</string>
    <string name="khatmah_delete_failed">Khatmah can\'t be removed</string>
    <string name="khatmah_delete_cab_failed">Some Khatmat can\'t be removed</string>
    <string name="discard_zekr_message">Do you want discard this Dhikr?</string>
    <string name="all_not_found">No Reminders for this day</string>
    <string name="khatmah_status">daily werd %1$d page(s)</string>
    <string name="rename_khatmah">Rename Khatmah</string>
    <string name="delete_confirm">Delete confirmation</string>
    <string name="delete_confirm_message">Are you sure you want to delete %s</string>
    <string name="delete_confirm_zekr">this Dhikr</string>
    <string name="delete_zekr_confirm_selected_message">Are you sure, delete %d Dhikr?</string>
    <string name="delete_khatmah_confirm_selected_message">Are you sure, delete %d Khatmah?</string>
    <string name="invalid_time_message">Invalid time</string>
    <string name="warning">Warning</string>
    <string name="got_it">Got it</string>
    <string name="add_azkar_hint">        &lt;b>&lt;font color=#4ab5ab>Add new Dhikr&lt;/font>&lt;/b>&lt;br/>
        &lt;br/>Click on this button to
        &lt;br/>add a new Dhikr to issue a notification at selected time.
        &lt;br/>&lt;br/>There are two categories of Azkar, the first one is dialy which repeated every day automatically
        the seconed is frequent which repeated as you wish.</string>
    <string name="add_khatmah_hint">        &lt;b>&lt;font color=#4ab5ab>Add new Khatmah&lt;/font>&lt;/b>&lt;br/>
        &lt;br/>Click on this button to
        &lt;br/>add a new Khatmah to help you to complete this Khatmah.
        &lt;br/>&lt;br/>You can select specific time to remind you every day by your Werd.
        You can start Khatmah from anywhere in Quran you want.It\'s avalabile to you to read your Werd on this application</string>
    <string name="about_copyrights">        &lt;b>منبه الذاكرين&lt;/b>
        &lt;br/>النسخة 1.1.1
        &lt;br/>جميع الحقوق محفوظة © 2015&lt;br/>
        &lt;br/>هذا التطبيق للتنبيه بالأذكار و ختمات القراءن التي يقرأها المسلم 
        لمساعدته علي تنظيم هذه الأذكار و الختمات.
        &lt;br/>هذا التطبيق هو صدقة جارية للمغفور له بإذن الله عبد المعز سيد نسألكم الدعاء له&lt;br/></string>
    <string name="about_contact">        &lt;a href="mailto:shhab7@gmail.com">للتواصل معنا&lt;/a></string>
    <string name="pref_info_title">information</string>
    <string name="pref_about_title">About Monabih AlZakren</string>
    <string name="pref_version_title">version</string>
    <string name="version_num">1.1.1</string>
    <string name="summary_title">You have %1$d new %2$s</string>
    <string name="summary_text">View all %s</string>
    <string name="khatmah">Khatmah</string>
    <string name="khatmat">Khatmat</string>
    <string name="azkar">Azkar</string>
    <string name="downloadPrompt_title">Download Required Files?</string>
    <string name="downloadPrompt">In order for Quran Android to work properly,
        we need to download some files. If you do not do this now, the app
        may not work reliably and will require an Internet connection for reading.
        Would you like to download the required files now?</string>
    <string name="downloadTabletPrompt">We recently added improved images for
        tablets. Would you like to download these images now?</string>
    <string name="downloadImportantPrompt">There is a small yet important update
        for the Quran images you have on your device. Would you like to download this
        patch now?</string>
    <string name="downloadPrompt_ok">Yes</string>
    <string name="downloadPrompt_no">No</string>
    <string name="downloading_title">Downloading&#8230;</string>
    <string name="downloading_message">Please wait for the files to download (resume supported).</string>
    <string name="extracting_title">Processing&#8230;</string>
    <string name="menu_about">About Us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_jump_last_page">Last page</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_bookmarks_page">Page Bookmarks</string>
    <string name="menu_bookmarks_ayah">Ayah Bookmarks</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_date">Date Added</string>
    <string name="menu_sort_location">Location in Quran</string>
    <string name="menu_sort_alphabetical">Alphabetical</string>
    <string name="menu_translation">Show Translation</string>
    <string name="menu_back_to_page">Show Quran</string>
    <string name="menu_help">Help</string>
    <string name="menu_search">Search</string>
    <string name="menu_get_translations">Get Translations</string>
    <string name="menu_jump">Jump</string>
    <string name="gotoPage">Go to page</string>
    <string name="cancel">Cancel</string>
    <string name="developedBy">La tansawna men saleh el doaa.</string>
    <string name="copyRights">&#169; All Muslims</string>
</resources>