<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/khatmah_toolbar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp" >

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/cab_background_top"
            android:divider="?android:dividerHorizontal"
            android:dividerPadding="8dp"
            android:orientation="horizontal"
            android:showDividers="middle" >

            <Button
                android:id="@+id/save_khatmah"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textAppearance="?android:listSeparatorTextViewStyle" />

            <Button
                android:id="@+id/cancel_khatmah"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/cancel"
                android:textAppearance="?android:listSeparatorTextViewStyle" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/new_khatmah_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:scrollbars="vertical" >

            <LinearLayout
                android:id="@+id/new_khatmah_holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <android.support.v7.widget.CardView
                    android:id="@+id/start_from_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="15dp" >

                    <LinearLayout
                        android:id="@+id/khatmah_start_holder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/start_from_header"
                            style="?android:attr/listSeparatorTextViewStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/khatmah_start_from_header" />

                        <LinearLayout
                            android:id="@+id/start_place_tvs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/start_juz2_tv"
                                style="?android:attr/textAppearanceSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/khatmah_start_juz2"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:id="@+id/start_sura_tv"
                                style="?android:attr/textAppearanceSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/khatmah_start_sura"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:id="@+id/start_ayah_tv"
                                style="?android:attr/textAppearanceSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/khatmah_start_ayah"
                                android:textColor="@android:color/black" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/start_spinners_holders"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:orientation="horizontal" >

                            <Spinner
                                android:id="@+id/start_juz2_spinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/spinner_background_holo_light" />

                            <Spinner
                                android:id="@+id/start_sura_spinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/spinner_background_holo_light" />

                            <Spinner
                                android:id="@+id/start_ayah_spinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/spinner_background_holo_light" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/duration_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/card_bg"
                    android:paddingBottom="15dp" >

                    <LinearLayout
                        android:id="@+id/khatmah_duration_holder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/khatmah_duration_header"
                            style="?android:attr/listSeparatorTextViewStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/khatmah_duration_header" />

                        <LinearLayout
                            android:id="@+id/duration_card_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:orientation="horizontal" >

                            <LinearLayout
                                android:id="@+id/card_monthes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:orientation="vertical" >

                                <TextView
                                    android:id="@+id/duration_monthes_tv"
                                    style="?android:attr/textAppearanceSmall"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/khatmah_duration_monthes"
                                    android:textColor="@android:color/black" />

                                <NumberPicker
                                    android:id="@+id/monthes_picker"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/card_days"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:orientation="vertical" >

                                <TextView
                                    android:id="@+id/duration_dayes_tv"
                                    style="?android:attr/textAppearanceSmall"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:text="@string/khatmah_duration_dayes"
                                    android:textColor="@android:color/black" />

                                <NumberPicker
                                    android:id="@+id/days_picker"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/card_werd"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:orientation="vertical" >

                                <TextView
                                    android:id="@+id/duration_werd_tv"
                                    style="?android:attr/textAppearanceSmall"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:text="@string/khatmah_duration_werd"
                                    android:textColor="@android:color/black" />

                                <NumberPicker
                                    android:id="@+id/werd_picker"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/reminder_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="15dp" >

                    <LinearLayout
                        android:id="@+id/khatmah_reminder_holder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/reminder_header_switch"
                            style="?android:attr/listSeparatorTextViewStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:checked="true"
                            android:text="@string/khatmah_reminder_header" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_marginLeft="10dp"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/reminder_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:gravity="center_vertical"
                                android:text="@string/khatmah_reminder_time"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@android:color/black" />

                            <Button
                                android:id="@+id/reminder_time_button"
                                style="?android:attr/borderlessButtonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:minHeight="0dp"
                                android:minWidth="0dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="5dp"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/reminder_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/khatmah_reminder_name"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@android:color/black" />

                            <EditText
                                android:id="@+id/khatmah_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="15dp"
                                android:layout_marginLeft="10dp"
                                android:hint="@string/khatmah_reminder_name_hint" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>